--- a/src/components/servicesComponent.css
+++ b/src/components/servicesComponent.css
@@ -8,6 +8,13 @@
     margin-bottom: 30px;
 }
 
+.services-details {
+    width: 100%;
+    background-color: rgb(247, 239, 255);
+    text-align: right;
+    
+}
+
 .totalBudget {
     text-align: right;
     margin-right:5%;
