--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,69 @@
-#root {
+@import url('https://fonts.googleapis.com/css2?family=Honk:SHLN@84.3&family=Sixtyfour+Convergence&display=swap');
+
+.font-honk {
+  font-family: 'Honk', system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "MORF" 15,
+    "SHLN" 84.3;
+}
+
+.sixtyfour-convergence-font {
+  font-family: "Sixtyfour Convergence", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "BLED" 0,
+    "SCAN" 0,
+    "XELA" 0,
+    "YELA" 0;
+}
+
+
+@import "tailwindcss";
+
+
+
+@layer utilities {
+  .bg-oranje {
+    background-color: #e0633c;
+  }
+  .bg-cream {
+    background-color: #eedecb;
+  }
+  .bg-black {
+    background-color: #202020;
+  }
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('..\public\fonts\MyFont.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-out;
+}
+/* #root {
   max-width: 80%;
   margin: 0 auto;
   padding: 2rem;
@@ -40,3 +105,4 @@
 .read-the-docs {
   color: #888;
 }
+ */
