--- a/src/components/servicesComponent.css
+++ b/src/components/servicesComponent.css
@@ -1,4 +1,4 @@
-.services {
+/* .services {
     display: flex;
     width: 100%;
     align-items:center;
@@ -18,4 +18,4 @@
 .totalBudget {
     text-align: right;
     margin-right:5%;
-}
+} */
